--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "less-loader": "^5.0.0",
     "qs": "^6.9.3",
     "showdown": "^1.9.1",
+    "swiper": "^5.4.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2",
     "wangeditor": "^3.1.1"
